--- a/cs10.html
+++ b/cs10.html
@@ -21,9 +21,21 @@
   </header>
 
   <section>
+    <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
+    <hr>
+    <p class="descr">Learn the basics of HTML and CSS to build simple web pages.</p>
+
+    <ol>
+      <li>
+        <div class="li-div">
+          <a href="#">Lesson 1</a>
+        </div>
+      </li>
+    </ol>
+
     <h2><i class="far fa-bookmark topic-heading"></i> JS First Steps</h2>
     <hr>
-    <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.<br></p>
+    <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.</p>
 
     <ol>
       <li>
@@ -80,7 +92,7 @@
 
     <h2><i class="far fa-bookmark topic-heading"></i> JS HTML Interaction</h2>
     <hr>
-    <p class="descr">Learn how JavaScript may be used to interact with elements of a web page.<br></p>
+    <p class="descr">Learn the basics of how JavaScript can interact with elements of a web page.</p>
 
     <ol>
       <li>
@@ -110,9 +122,9 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Control Structures</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS If, Loops & Random</h2>
     <hr>
-    <p class="descr">Learn how JavaScript may be used to select and repeat code with if statements and loops.<br></p>
+    <p class="descr">Learn about JavaScript random numbers, if statements and loops.</p>
 
     <ol>
       <li>
@@ -147,9 +159,10 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS Miscellaneous</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt; Basics</h2>
     <hr>
-    <p class="descr">Miscellaneous topics in JavaScript.<br></p>
+    <p class="descr">Learn the basics of drawing and animation on an html &lt;canvas&gt;
+      element.</p>
 
     <ol>
 
@@ -158,14 +171,18 @@
           <a href="#">HTML dataset</a>
         </div>
       </li>
+    </ol>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt; Basics</h2>
+    <hr>
+    <p class="descr">Learn the basics of drawing and animation on an html &lt;canvas&gt;
+      element.</p>
+
+    <ol>
+
       <li>
         <div class="li-div">
-          <a href="#">fetch() & JSON</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">localStorage</a>
+          <a href="#">Lesson 1</a>
         </div>
       </li>
     </ol>
@@ -174,7 +191,7 @@
   <!-- Load Nav -->
   <script src="js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("includes/nav.html", "nav");
+    loadFileIntoEl("includes/nav-cs10.html", "nav");
   </script>
 </body>
 
