--- a/cs20.html
+++ b/cs20.html
@@ -53,7 +53,7 @@
       <a href="#" class="btn">JS Portfolio Instructions</a>
     </p>
 
-    <h4>More JavaScript</h4>
+    <h4>Explore Web Applications</h4>
     <ol>
       <li>
         <div class="li-div">
@@ -62,7 +62,7 @@
       </li>
     </ol>
 
-    <h4>Game Development</h4>
+    <h4>Explore Game Development</h4>
     <ol>
       <li>
         <div class="li-div">
@@ -74,7 +74,7 @@
     <!-- Load Nav -->
     <script src="js/load-nav.js"></script>
     <script>
-      loadFileIntoEl("includes/nav.html", "nav");
+      loadFileIntoEl("includes/nav-cs20.html", "nav");
     </script>
 </body>
 
