--- a/cs30.html
+++ b/cs30.html
@@ -60,7 +60,7 @@
     <!-- Load Nav -->
     <script src="js/load-nav.js"></script>
     <script>
-      loadFileIntoEl("includes/nav.html", "nav");
+      loadFileIntoEl("includes/nav-cs30.html", "nav");
     </script>
 </body>
 
