--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <!-- Load Nav -->
   <script src="js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("includes/nav.html", "nav");
+    loadFileIntoEl("includes/nav-cs10.html", "nav");
   </script>
 </body>
 
