started html canvas

--- a/cs10.html
+++ b/cs10.html
@@ -168,18 +168,16 @@
 
       <li>
         <div class="li-div">
-          <a href="#">HTML dataset</a>
+          <a href="html-canvas/drawing-basics.html">Drawing Basics</a>
         </div>
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt; Basics</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Explore &lt;canvas&gt;</h2>
     <hr>
-    <p class="descr">Learn the basics of drawing and animation on an html &lt;canvas&gt;
-      element.</p>
+    <p class="descr">Explore what is possible with the html &lt;canvas&gt;.</p>
 
     <ol>
-
       <li>
         <div class="li-div">
           <a href="#">Lesson 1</a>
