drawing basics work

--- a/cs10.html
+++ b/cs10.html
@@ -33,9 +33,9 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS First Steps</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO Basics</h2>
     <hr>
-    <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.</p>
+    <p class="descr">Learn how to build basic Input-Process-Output JavaScript applications.</p>
 
     <ol>
       <li>
@@ -90,9 +90,9 @@
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS HTML Interaction</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO & HTML</h2>
     <hr>
-    <p class="descr">Learn the basics of how JavaScript can interact with elements of a web page.</p>
+    <p class="descr">Learn how to use HTML for the Input & Output in JavaScript applications.</p>
 
     <ol>
       <li>
@@ -165,7 +165,6 @@
       element.</p>
 
     <ol>
-
       <li>
         <div class="li-div">
           <a href="html-canvas/drawing-basics.html">Drawing Basics</a>
