--- a/cs20.html
+++ b/cs20.html
@@ -53,7 +53,7 @@
       <a href="#" class="btn">JS Portfolio Instructions</a>
     </p>
 
-    <h4>Explore Web Applications</h4>
+    <h4>Explore JS</h4>
     <ol>
       <li>
         <div class="li-div">
@@ -62,7 +62,7 @@
       </li>
     </ol>
 
-    <h4>Explore Game Development</h4>
+    <h4>Explore &lt;canvas&gt;</h4>
     <ol>
       <li>
         <div class="li-div">
