--- a/html-canvas/drawing-basics.html
+++ b/html-canvas/drawing-basics.html
@@ -28,7 +28,7 @@
 
     <p class="description">Learn the basics of drawing shapes and text on an html <code
         class="lang-html">&lt;canvas&gt;</code>.</p>
-    <p class="concept-list">&lt;canvas&gt; | graphics context | canvas coordinate system | basic shapes & text</p>
+    <p class="concept-list">&lt;canvas&gt; | canvas coordinate system | graphics context | basic shapes & text</p>
 
     <h2><i class="far fa-bookmark topic-heading"></i> HTML <code class="lang-html">&lt;canvas&gt;</code> Element</h2>
     <p>An HTML <code class="lang-html">&lt;canvas&gt;</code> element may be added to your web page.</p>
@@ -37,16 +37,232 @@
 
     <hr>
 
+    <h2><i class="far fa-bookmark topic-heading"></i> Canvas Coordinate System</h2>
+    <p>The canvas uses a coordinate system to specify the location of items to draw.</p>
+    <p>The origin is the top-left corner of the canvas.</p>
+    <p>The x-axis increases as you go right from the origin.</p>
+    <p>The y-axis increases as you go down from the origin.</p>
+    <p>
+      <img src="img/canvas-coords.png" alt="Canvas Coordinates" class="img-fluid">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Canvas & Context</h2>
+    <p>A reference to the html <code class="lang-html">&lt;canvas&gt;</code> element may be used to generate a graphics
+      context and to specify the width
+      and height of the canvas.</p>
+    <pre><code class="lang-js">
+let cnv = document.getElementById("myCanvas");
+let ctx = cnv.getContext("2d");
+cnv.width = 600;
+cnv.height = 400;
+    </code></pre>
+    <p>The graphics context (ctx) is what is used to control what is drawn on the canvas.</p>
+
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Drawing Properties</h2>
+    <p>The graphics context has various properties that may control things such as the line thickness or color of what
+      is drawn.</p>
+    <p>Color properties may use any valid CSS colors.</p>
+    <pre><code class="lang-js">
+// Set the fill color
+ctx.fillStyle = "green";
+
+// Set the line color
+ctx.strokeStyle = "rgb(255, 0, 0)";
+
+// Set the line thickness
+ctx.lineWidth = 4;
+    </code></pre>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Filled Rectangle</h2>
+    <pre><code class="lang-js">
+ctx.fillRect(x, y, w, h);
+    </code></pre>
+    <ul>
+      <li>(x, y) = top left corner</li>
+      <li>w = width</li>
+      <li>h = height</li>
+    </ul>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw a filled rectangle
+ctx.fillStyle = "blue";
+ctx.fillRect(50, 50, 100, 60);
+    </code></pre>
+    <p>
+      <img src="img/filled-rect.PNG" alt="Filled Rectangle" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Outlined Rectangle</h2>
+    <pre><code class="lang-js">
+ctx.strokeRect(x, y, w, h);
+    </code></pre>
+    <ul>
+      <li>(x, y) = top left corner</li>
+      <li>w = width</li>
+      <li>h = height</li>
+    </ul>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw an outlined rectangle
+ctx.strokeStyle = "blue";
+ctx.lineWidth = 4;
+ctx.strokeRect(50, 50, 100, 60);
+    </code></pre>
+    <p>
+      <img src="img/stroke-rect.PNG" alt="Outlined Rectangle" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Filled Text</h2>
+    <pre><code class="lang-js">
+ctx.fillText(text, x, y);
+    </code></pre>
+    <ul>
+      <li>text = message to display</li>
+      <li>(x, y) = bottom left corner</li>
+    </ul>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw filled text
+ctx.font = "30px Arial";
+ctx.fillStyle = "green";
+ctx.fillText("Canvas Text", 50, 100);    
+    </code></pre>
+    <p>
+      <img src="img/filled-text.PNG" alt="Filled Text" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Outlined Text</h2>
+    <pre><code class="lang-js">
+ctx.strokeText(text, x, y);
+    </code></pre>
+    <ul>
+      <li>text = message to display</li>
+      <li>(x, y) = bottom left corner</li>
+    </ul>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw outlined text
+ctx.font = "36px Times";
+ctx.lineWidth = 1;
+ctx.strokeStyle = "green";
+ctx.strokeText("Canvas Text", 50, 100);    
+    </code></pre>
+    <p>
+      <img src="img/stroke-text.PNG" alt="Outlined Text" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Line</h2>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw a line
+ctx.lineWidth = 5;
+ctx.strokeStyle = "rgb(0, 0, 255)";
+ctx.beginPath();
+ctx.moveTo(75, 50); // Start at (x1, y1)
+ctx.lineTo(200, 100); // Go to (x2, y2)
+ctx.stroke(); // Draw path
+    </code></pre>
+    <p>
+      <img src="img/draw-line.PNG" alt="Draw Line" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Filled Triangle</h2>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw a filled triangle
+ctx.fillStyle = "#00FF00";
+ctx.beginPath();
+ctx.moveTo(100, 50); // Start at (x1, y1)
+ctx.lineTo(50, 150); // Go to (x2, y2)
+ctx.lineTo(150, 150); // Go to (x3, y3)
+ctx.fill(); // Fill shape
+    </code></pre>
+    <p>
+      <img src="img/filled-triangle.PNG" alt="Filled Triangle" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Outlined Triangle</h2>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw an outlined triangle
+ctx.lineWidth = 2;
+ctx.strokeStyle = "green";
+ctx.beginPath();
+ctx.moveTo(100, 50); // Start at (x1, y1)
+ctx.lineTo(50, 150); // Go to (x2, y2)
+ctx.lineTo(150, 150); // Go to (x3, y3)
+ctx.closePath(); // Go back to start
+ctx.stroke(); // Draw path
+    </code></pre>
+    <p>
+      <img src="img/stroke-triangle.PNG" alt="Outlined Triangle" class="img-fluid-max">
+    </p>
+
+    <div class="attention-box">
+      <p><i class="fas fa-exclamation-triangle attention"></i> To draw any n-sided polygon simply add more <code
+          class="lang-js">ctx.lineTo()</code> commands.</p>
+    </div>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Filled Circle</h2>
+    <pre><code class="lang-js">
+ctx.arc(x, y, r, start, end);
+    </code></pre>
+    <ul>
+      <li>(x, y) = center</li>
+      <li>r = radius</li>
+      <li>start = start angle in radians</li>
+      <li>end = end angle in radians</li>
+    </ul>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw a filled circle
+ctx.fillStyle = "blue";
+ctx.beginPath();
+ctx.arc(150, 150, 100, 0, 2 * Math.PI);
+ctx.fill();
+    </code></pre>
+    <p>
+      <img src="img/filled-circle.PNG" alt="Filled Circle" class="img-fluid-max">
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Outlined Circle</h2>
+    <h4>Example</h4>
+    <pre><code class="lang-js">
+// Draw an outlined circle
+ctx.lineWidth = 3;
+ctx.strokeStyle = "blue";
+ctx.beginPath();
+ctx.arc(150, 150, 100, 0, 2 * Math.PI);
+ctx.stroke();
+    </code></pre>
+    <p>
+      <img src="img/stroke-circle.PNG" alt="Outlined Circle" class="img-fluid-max">
+    </p>
+    <hr>
+
     <h2><i class="far fa-list-alt summary"></i> Summary</h2>
     <ul>
-      <li>...</li>
+      <li>HTML has a <code class="lang-js">&lt;canvas&gt;</code> element that can be used for drawing.</li>
+      <li>The canvas' graphics context may be used to draw various shapes and text to the canvas.</li>
     </ul>
     <hr>
 
     <h2><i class="far fa-check-square check"></i> Check Your Understanding</h2>
     <p>Try to do the following task(s) to check your understanding. Ask for help if needed.</p>
     <ul>
-      <li>...</li>
+      <li>Use a canvas to draw the image below:</li>
     </ul>
     <hr>
 
