finish drawing basics & widen site

--- a/cs10.html
+++ b/cs10.html
@@ -170,6 +170,11 @@
           <a href="html-canvas/drawing-basics.html">Drawing Basics</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="html-canvas/draw-images.html">Draw Images</a>
+        </div>
+      </li>
     </ol>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Explore &lt;canvas&gt;</h2>
