--- a/cs10.html
+++ b/cs10.html
@@ -175,6 +175,21 @@
           <a href="html-canvas/draw-images.html">Draw Images</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="html-canvas/loops-and-drawing.html">Loops & Drawing</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="#" class="asgn-link">Draw Cityscape Asgn</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="html-canvas/animation-basics.html">Animation Basics</a>
+        </div>
+      </li>
     </ol>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Explore &lt;canvas&gt;</h2>
