--- a/cs20.html
+++ b/cs20.html
@@ -50,7 +50,7 @@
     <p class="descr">Create a portfolio of JavaScript programs. Apply course concepts and explore new concepts.</p>
 
     <p>
-      <a href="#"><i class="fas fa-share-square"></i>JS Portfolio Instructions</a>
+      <a href="#"><i class="fas fa-external-link-alt red"></i>JS Portfolio Instructions</a>
     </p>
 
     <h4>Explore JS</h4>
