--- a/html-canvas/draw-images.html
+++ b/html-canvas/draw-images.html
@@ -80,7 +80,7 @@ function draw() {
 
     <h2><i class="far fa-list-alt summary"></i> Summary</h2>
     <ul>
-      <li>The <code class="lang-js">ctx.drawImage()</code> function may be used to draw images to the canvas.</li>
+      <li>The <code class="lang-js">ctx.drawImage()</code> function may be used to draw images on the canvas.</li>
       <li>The window load event may be used to make sure that the program waits for all resources to be loaded.</li>
     </ul>
     <hr>
