--- a/cs10.html
+++ b/cs10.html
@@ -190,6 +190,11 @@
           <a href="html-canvas/animation-basics.html">Animation Basics</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="html-canvas/control-animation.html">Control Animation</a>
+        </div>
+      </li>
     </ol>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Explore &lt;canvas&gt;</h2>
