--- a/html-canvas/animation-basics.html
+++ b/html-canvas/animation-basics.html
@@ -31,7 +31,7 @@
     <p>
       <img src="img/Home-Alone-Flipbook-Animation-The-Flippist.gif" alt="Flipbook" class="w-40" title="theflippist.com">
     </p>
-    <p class="concept-list">requestAnimationFrame() | Variables & Animation | Concept3</p>
+    <p class="concept-list">requestAnimationFrame() | Variables & Animation</p>
 
     <!-- Request Animation Frame -->
     <h2><i class="far fa-bookmark topic-heading"></i> requestAnimationFrame()</h2>
@@ -69,7 +69,7 @@ let x = 100;
 requestAnimationFrame(draw);
 function draw() {
   // Update Variable 
-  x++;
+  x += 2;
 
   // Draw Background 
   ctx.fillStyle = "white";
@@ -115,7 +115,8 @@ function draw() {
       <img src="img/draw-sunrise.png" alt="Draw Sunrise" class="w-60">
     </p>
     <p>
-      <a href="#" class="btn"><i class="fab fa-youtube fa-lg"></i> Video Explanation</a>
+      <a href="#" class="btn"><i class="fab fa-youtube fa-lg"></i> Video Explanation</a> |
+      <a href="#" class="btn"><i class="fab fa-youtube fa-lg"></i> Video Solution</a>
     </p>
     <hr>
 
