--- a/js-reference.html
+++ b/js-reference.html
@@ -7,8 +7,8 @@
   <title>JS Reference</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
-  <link href="css/home.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -16,14 +16,30 @@
 
   <header>
     <h1>JavaScript Reference</h1>
-    <p class="lead">A repository of notes explaining fundamental HTML, CSS & JavaScript concepts.</p>
+    <p class="lead">Notes & videos explaining fundamental HTML, CSS & JavaScript concepts.</p>
     <p class="motto">Learn - Think - Create</p>
   </header>
 
   <section>
-    <h2><i class="far fa-bookmark topic-heading"></i> JS First Steps</h2>
+    <!-- HTML & CSS Basics -->
+    <!-- <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
     <hr>
-    <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.<br></p>
+    <p class="descr">Learn the basics of HTML & CSS to build simple web pages. These web pages will serve as the GUIs
+      <em>(Graphical User Interfaces)</em> for our
+      JavaScript programs.</p>
+
+    <ol>
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/getElementById.html">...</a>
+        </div>
+      </li>
+    </ol> -->
+
+    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO Basics</h2>
+    <hr>
+    <p class="descr">Learn the basics of JavaScript to build simple Input-Process-Output <em>(IPO)</em> web
+      applications.<br></p>
 
     <ol>
       <li>
@@ -172,9 +188,9 @@
   </section>
 
   <!-- Load Nav -->
-  <script src="js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("includes/nav.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 </body>
 
