--- a/page-template.html
+++ b/page-template.html
@@ -7,21 +7,37 @@
   <title>HACS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <nav></nav>
 
   <main>
-    <h1>TITLE</h1>
+    <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
+    <div class="title">
+      <h1>Page Title</h1>
+      <a href="#" id="yt-link" target="_blank">
+        <i class="fab fa-youtube fa-lg"></i>
+        Video Explanation
+      </a>
+    </div>
     <hr>
 
     <h2><i class="far fa-bookmark topic-heading"></i> Topic Heading</h2>
+    <p>Notes...</p>
+    <p>Button link: <a href="#" class="btn">Test</a></p>
+    <p>Regular link: <a href="#">Test</a></p>
 
+    <p>
+      <pre><code class="lang-js">
+// Test Code
+Testing
+      </code></pre>
+    </p>
     <hr>
 
     <h2><i class="far fa-list-alt summary"></i> Summary</h2>
@@ -40,8 +56,8 @@
     <div class="attention-box">
       <h4><i class="fas fa-exclamation-triangle attention"></i> Attention</h4>
       <ul>
-        <li>be sure to use an event listener to give the user time to type something into the input element!</li>
-        <li>the value of the input element is always a String data type. Convert to a Number data type if required.</li>
+        <li>...</li>
+        <li>...</li>
       </ul>
     </div>
     <hr>
@@ -50,12 +66,12 @@
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/hacs/js/prism.js"></script>
 </body>
 
 </html>
