--- a/js-reference.html
+++ b/js-reference.html
@@ -24,9 +24,8 @@
     <!-- HTML & CSS Basics -->
     <!-- <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
     <hr>
-    <p class="descr">Learn the basics of HTML & CSS to build simple web pages. These web pages will serve as the GUIs
-      <em>(Graphical User Interfaces)</em> for our
-      JavaScript programs.</p>
+    <p class="descr">HTML & CSS may be used to build simple web pages. These web pages can serve as the GUIs
+      <em>(Graphical User Interfaces)</em> for JavaScript programs.</p>
 
     <ol>
       <li>
@@ -38,65 +37,60 @@
 
     <h2><i class="far fa-bookmark topic-heading"></i> JS IPO Basics</h2>
     <hr>
-    <p class="descr">Learn the basics of JavaScript to build simple Input-Process-Output <em>(IPO)</em> web
+    <p class="descr">Use JavaScript to build simple Input-Process-Output <em>(IPO)</em> web
       applications.<br></p>
 
     <ol>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-introduction.html">Introduction</a>
+          <a href="js-ipo-basics/js-introduction.html">Introduction</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-comments.html">Comments</a>
+          <a href="js-ipo-basics/js-comments.html">Comments</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/dev-console.html">Developer Console</a>
+          <a href="js-ipo-basics/dev-console.html">Developer Console</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-string-data.html">String Data Type</a>
+          <a href="js-ipo-basics/js-variables.html">Variables & Data</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-number-data.html">Number Data Type</a>
+          <a href="js-ipo-basics/js-number-data.html">Number Data Type</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-type-conversions.html">Type Conversions</a>
+          <a href="js-ipo-basics/js-math-object.html">Math Object</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">Random Numbers</a>
+          <a href="js-ipo-basics/js-string-data.html">String Data Type</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-variables.html">Variables</a>
+          <a href="js-ipo-basics/js-input-prompt.html">Input - prompt() </a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-variable-operators.html">Variable Operators</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-input-prompt.html">Input with prompt()</a>
+          <a href="js-ipo-basics/js-input-prompt.html">IPO Algorithm</a>
         </div>
       </li>
     </ol>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> JS HTML Interaction</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> JS IPO & HTML</h2>
     <hr>
-    <p class="descr">Learn how JavaScript may be used to interact with elements of a web page.<br></p>
+    <p class="descr">Use JavaScript to interact with elements of a web page.<br></p>
 
     <ol>
       <li>
