--- a/js-ipo-basics/js-variables.html
+++ b/js-ipo-basics/js-variables.html
@@ -7,28 +7,62 @@
   <title>HACS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+  <link href="/hacs/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <nav></nav>
 
   <main>
-    <h1>JS Variables</h1>
+    <a class="back-link" href="/hacs/js-reference.html">&lt; JS Reference</a>
+    <div class="title">
+      <h1>JS Variables</h1>
+      <!-- <a href="#" id="yt-link" target="_blank">
+        <i class="fab fa-youtube fa-lg"></i>
+        Video Explanation
+      </a> -->
+    </div>
     <hr>
 
-    <h2><i class="far fa-bookmark topic-heading"></i> Storing Data with Variables</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Program Data</h2>
+    <p>Common types of data that programs work with are <strong>Strings</strong> and <strong>Numbers</strong>.</p>
+
+    <h3>Strings</h3>
+    <p>A String is a sequence of characters used to represent text.</p>
+    <p>Strings are commonly enclosed by matching double or single quotes.</p>
+    <p>
+      <pre><code class="lang-js">
+"doubled-quoted String data"
+'single-quoted String data'
+"Hello World"
+'green'
+"42"
+      </code></pre>
+    </p>
+
+    <h3>Numbers</h3>
+    <p>A Number is a numerical value <em>(with or without a decimal)</em> that is not enclosed by quotes.</p>
+    <p>
+      <pre><code class="lang-js">
+25
+3.14159
+-42
+      </code></pre>
+    </p>
+    <hr>
+
+    <h2><i class="far fa-bookmark topic-heading"></i> Variable Basics</h2>
     <p>Variables are used to store and manage program data.</p>
-    <p>A variable is a "named storage container" for data.</p>
+    <p>A variable is a <em>"named storage container"</em> for data.</p>
     <p>To create a variable use the <code class="lang-js">let</code> keyword.</p>
     <p>
       <pre><code class="lang-js">
 // DECLARE A VARIABLE: 
-// -tell JS to make a storage container called age
-let age;
+// -tell JS to make a storage container called day
+let day;
       </code></pre>
     </p>
 
@@ -36,19 +70,18 @@ let age;
     <p>
       <pre><code class="lang-js">
 // ASSIGN DATA TO A VARIABLE: 
-// -put data into age container
-age = 15;
+// -put data into day container
+day = "Monday";
       </code></pre>
     </p>
 
-    <p>The number 15 is now saved into the memory area associated with the variable named age.</p>
+    <p>The String "Monday" is now saved into the memory area associated with the variable named day.</p>
     <p>Use the variable name to access the data stored in memory.</p>
     <p>
       <pre><code class="lang-js">
 // USE VARIABLE: 
-// -log the contents of the age variable to the console
-console.log(age); // Output => 15
-console.log(age + 1); // Output => 16
+// -log the contents of the day variable to the console
+console.log(day); // Output => "Monday"
       </code></pre>
     </p>
 
@@ -56,16 +89,17 @@ console.log(age + 1); // Output => 16
     <p>
       <pre><code class="lang-js">
 // REASSIGN VARIABLE: 
-// -put new data into the age container
-age = 18;
-console.log(age); // Output => 18
+// -put new data into the day container
+day = "Tuesday";
+console.log(day); // Output => "Tuesday"
       </code></pre>
     </p>
     <p>To be concise, we can combine the variable declaration and assignment into a single line.</p>
     <p>
       <pre><code class="lang-js">
 // DECLARE & ASSIGN IN ONE LINE
-let age = 15;
+let day = "Wednesday";
+console.log(day); // Output => "Wednesday"
       </code></pre>
     </p>
     <hr>
@@ -85,6 +119,7 @@ let age = 15;
 
     <h2><i class="far fa-list-alt summary"></i> Summary</h2>
     <ul>
+      <li>Programs often work with String and Number data.</li>
       <li>Variables are used to store data.</li>
       <li>Follow the rules for naming variables to make them valid and meaningful.</li>
     </ul>
@@ -92,12 +127,12 @@ let age = 15;
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/hacs/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/hacs/includes/nav-js-ref.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/hacs/js/prism.js"></script>
 </body>
 
 </html>
